profile picture added

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <i class="header-toggle d-xl-none bi bi-list"></i>
 
     <div class="profile-img">
-      <img src="assets/img/my-profile-img.jpg" alt="" class="img-fluid rounded-circle">
+      <img src="assets/img/my-profile-img.png" alt="" class="img-fluid rounded-circle">
     </div>
 
     <a href="index.html" class="logo d-flex align-items-center justify-content-center">
@@ -52,11 +52,11 @@
     </a>
 
     <div class="social-links text-center">
-      <a href="#" class="twitter"><i class="bi bi-twitter-x"></i></a>
+     
       <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
       <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
       <a href="#" class="google-plus"><i class="bi bi-skype"></i></a>
-      <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
+      <a href="https://www.linkedin.com/in/hassan-alkhari/" class="linkedin"><i class="bi bi-linkedin"></i></a>
     </div>
 
     <nav id="navmenu" class="navmenu">
@@ -94,7 +94,7 @@
       <div class="container" data-aos="fade-up" data-aos-delay="100">
         <div class="row gy-4 justify-content-center">
           <div class="col-lg-4">
-            <img src="assets/img/my-profile-img.jpg" class="img-fluid" alt="Hassan Iqbal">
+            <img src="assets/img/my-profile-img.png" class="img-fluid" alt="Hassan Iqbal" style="border-radius: 50px;">
           </div>
           <div class="col-lg-8 content">
             <h2>WordPress &amp; Full-Stack Developer</h2>
@@ -261,7 +261,8 @@
 
         <h3 class="resume-title">Education</h3>
 
-        <div class="resume-item">
+        <div class="resume-certification">
+          <div class="resume-item">
           <h4>Bachelor of Science in Computer Science</h4>
           <h5>2011 - 2015</h5>
           <p><em>Allama Iqbal Open University, Pakistan</em></p>
@@ -273,19 +274,31 @@
         </div><!-- End Resume Item -->
         <h3 class="resume-title">Certifications</h3>
         <div class="resume-item">
-          <ul>
-            <li>Microsoft .NET Fundamentals – GreatLearning</li>
-            <li>.NET Full Stack Foundation – Board Infinity</li>
-            <li>Backend Development for .NET Full Stack – Board Infinity</li>
-            <li>Angular for Front End Engineers – Codio</li>
-            <li>Time Management for Personal & Professional Productivity – University of California</li>
-            <li>Project Initiation: Starting a Successful Project – Google</li>
-            <li>Project Initiation: Starting a Successful Project – Google</li>
-            <li>Project Planning & Management – Google</li>
-
-          </ul>
-        </div><!-- End Resume Item -->
+          <div>Microsoft .NET Fundamentals – Great Learning</div>
+        </div>
+        <div class="resume-item">
+          <div>.NET Full Stack Foundation – Board Infinity</div>
+        </div>
+        <div class="resume-item">
+          <div>Backend Development for .NET Full Stack – Board Infinity</div>
+        </div>
+        <div class="resume-item">
+          <div>Angular for Front End Engineers – Codio</div>
+        </div>
+       
+        <div class="resume-item">
+          <div>Project Planning & Management – Google</div>
+        </div>
+        <div class="resume-item">
+          <div>Project Initiation: Starting a Successful Project – Google</div>
+        </div>
+        <div class="resume-item">
+          <div>Time Management for Personal & Professional Productivity – University of California</div>
+        </div>
       </div>
+   
+        </div><!-- End Resume Item -->
+  
 
       <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
         <h3 class="resume-title">Professional Experience</h3>
