--- a/index.html
+++ b/index.html
@@ -62,13 +62,11 @@
     <nav id="navmenu" class="navmenu">
       <ul>
         <li><a href="#hero" class="active"><i class="bi bi-house navicon"></i>Home</a></li>
-        <li><a href="#about"><i class="bi bi-person navicon"></i> About</a></li>
-        <li><a href="#resume"><i class="bi bi-file-earmark-text navicon"></i> Resume</a></li>
-        <li><a href="#portfolio"><i class="bi bi-images navicon"></i> Portfolio</a></li>
-        <li><a href="#testimonials"><i class="bi bi-images navicon"></i> Testimonials</a></li>
-
-        
-        <li><a href="#contact"><i class="bi bi-envelope navicon"></i> Contact</a></li>
+        <li><a href="#about"><i class="bi bi-person navicon"></i>About</a></li>
+        <li><a href="#resume"><i class="bi bi-file-earmark-text navicon"></i>Resume</a></li>
+        <li><a href="#portfolio"><i class="bi bi-images navicon"></i>Portfolio</a></li>
+        <li><a href="#testimonials"><i class="bi bi-images navicon"></i>Testimonials</a></li>
+        <li><a href="#contact"><i class="bi bi-envelope navicon"></i>Contact</a></li>
       </ul>
     </nav>
 
@@ -80,7 +78,7 @@
       <img src="assets/img/hero-bg.jpg" alt="" data-aos="fade-in" class="">
       <div class="container" data-aos="fade-up" data-aos-delay="100">
         <h2>Hassan Iqbal</h2>
-        <p>I'm <span class="typed" data-typed-items="WordPress Developer, Full-Stack Developer, Freelancer">WordPress Developer</span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
+        <p>I'm <span class="typed" data-typed-items="WordPress Developer,Senior Software Engineer, Frontend Developer">WordPress Developer</span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
       </div>
     </section><!-- /Hero Section -->
   
@@ -103,9 +101,9 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>12 DEC 1990</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>https://hsniqbal.github.io/portfolio/</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span><a href="https://hsniqbal.github.io/portfolio/">hsniqbal.github.io/portfolio</a></span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+92 322 5181321</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Rawalpindi, Pakistan</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Saddar Rawalpindi, Pakistan</span></li>
                 </ul>
               </div>
               <div class="col-lg-6">
@@ -113,7 +111,6 @@
                   <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>34</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Bachelor of Science in Computer Science</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>hassaniqbal.dev@gmail.com</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
                 </ul>
               </div>
             </div>
@@ -132,7 +129,7 @@
           <div class="col-lg-3 col-md-6">
             <div class="stats-item">
               <i class="bi bi-emoji-smile"></i>
-              <span data-purecounter-start="0" data-purecounter-end="232" data-purecounter-duration="1" class="purecounter"></span>
+              <span data-purecounter-start="0" data-purecounter-end="65" data-purecounter-duration="1" class="purecounter"></span>
               <p><strong>Happy Clients</strong></p>
             </div>
           </div><!-- End Stats Item -->
@@ -140,7 +137,7 @@
           <div class="col-lg-3 col-md-6">
             <div class="stats-item">
               <i class="bi bi-journal-richtext"></i>
-              <span data-purecounter-start="0" data-purecounter-end="521" data-purecounter-duration="1" class="purecounter"></span>
+              <span data-purecounter-start="0" data-purecounter-end="170" data-purecounter-duration="1" class="purecounter"></span>
               <p><strong>Projects</strong></p>
             </div>
           </div><!-- End Stats Item -->
@@ -148,7 +145,7 @@
           <div class="col-lg-3 col-md-6">
             <div class="stats-item">
               <i class="bi bi-headset"></i>
-              <span data-purecounter-start="0" data-purecounter-end="1453" data-purecounter-duration="1" class="purecounter"></span>
+              <span data-purecounter-start="0" data-purecounter-end="8012" data-purecounter-duration="1" class="purecounter"></span>
               <p><strong>Hours Of Support</strong> </p>
             </div>
           </div><!-- End Stats Item -->
@@ -156,7 +153,7 @@
           <div class="col-lg-3 col-md-6">
             <div class="stats-item">
               <i class="bi bi-people"></i>
-              <span data-purecounter-start="0" data-purecounter-end="32" data-purecounter-duration="1" class="purecounter"></span>
+              <span data-purecounter-start="0" data-purecounter-end="12" data-purecounter-duration="1" class="purecounter"></span>
               <p><strong>Hard Workers</strong></p>
             </div>
           </div><!-- End Stats Item -->
@@ -715,4 +712,12 @@
 
 </body>
 
+<style>
+  @media (max-width: 1600px) {
+    .container {
+      padding-left: 40px !important;
+      padding-right: 40px !important;
+    }
+  }
+  </style>
 </html>
