--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
           <div class="col-md-6 col-lg-3 aos-init aos-animate" data-aos="fade-up" data-aos-delay="300">
             <div class="skill-box">
               <div class="d-flex align-items-center">
-                <img src="assets/img/icons/.net-framework.png" alt="HTML Icon" width="60"  class="me-2">
+                <img src="assets/img/icons/net-framework.png" alt="HTML Icon" width="60"  class="me-2">
                 <h3 class="mb-0">.net Framework</h3>
               </div>
               <span class="text-end d-block">40%</span>
