--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@
         <h3 class="resume-title">Professional Experience</h3>
         
         <div class="resume-item">
-          <h4>Senior Full-Stack Developer (Angular & .NET Core)</h4>
+          <h4>Senior Software Engineer</h4>
           <h5>Aug 2022 - Present</h5>
           <p><em>iENGINEERING</em></p>
           <ul>
@@ -480,8 +480,8 @@
       </div><!-- End Resume Item -->
       
         <div class="resume-item">
-          <h4>WordPress Engineer (Transitioning to .NET)</h4>
-          <h5>Sep 2020 - Apr 2021</h5>
+          <h4>WordPress Engineer</h4>
+          <h5>Sep 2020 - Jul 2021</h5>
           <p><em>Bits n Brains</em></p>
           <ul>
             <li>Led development of custom WordPress themes and plugins.</li>
