--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
       <ul>
         <li><a href="#hero" class="active"><i class="bi bi-house navicon"></i>Home</a></li>
         <li><a href="#about"><i class="bi bi-person navicon"></i>About</a></li>
+        <li><a href="#skills"><i class="bi bi-images navicon"></i>Skills</a></li>
         <li><a href="#resume"><i class="bi bi-file-earmark-text navicon"></i>Resume</a></li>
         <li><a href="#portfolio"><i class="bi bi-images navicon"></i>Portfolio</a></li>
-        <li><a href="#skills"><i class="bi bi-images navicon"></i>Skills</a></li>
         <li><a href="#technical"><i class="bi bi-images navicon"></i>Technical Proficiency</a></li>
         <li><a href="#testimonials"><i class="bi bi-images navicon"></i>Testimonials</a></li>
         <li><a href="#contact"><i class="bi bi-envelope navicon"></i>Contact</a></li>
@@ -126,7 +126,7 @@
     </section><!-- /About Section -->
 
     <!-- Stats Section -->
-    <section id="stats" class="stats section">
+    <section id="stats" class="stats section" style="display: none;">
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
 
