--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                 <img src="assets/img/icons/image_fd.png" alt="HTML Icon" width="60"  class="me-2">
                 <h3 class="mb-0">Frontend Development</h3>
               </div>
-              <p>Angular 14+, TypeScript, HTML5, CSS3, Bootstrap, jQuery</p>
+              <p>HTML5, CSS3, Bootstrap, jQuery, Angular, TypeScript</p>
              
             </div>
           </div>
@@ -662,7 +662,7 @@
 
 
     <!-- Testimonials Section -->
-    <section id="testimonials" class="testimonials section light-background">
+    <section id="testimonials" class="testimonials section ">
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
@@ -766,7 +766,7 @@
       </div>
     </section><!-- /Testimonials Section -->
      <!-- Contact Section -->
-     <section id="contact" class="contact section">
+     <section id="contact" class="contact section light-background">
       <div class="container section-title align-center" data-aos="fade-up">
         <h2>Contact</h2>
         <p>Feel free to reach out for collaborations, freelance work, or inquiries.</p>
@@ -907,6 +907,25 @@
 }
 section#skills .skill-box {
     background-color:#e6e4de !important;
+}
+section#skills .skill-box img {
+    min-height: 50px;
+    max-height: 50px;
+}
+section#skills .skill-box p {
+    font-size: 0.9rem;
+    margin-bottom: 0.8rem;
+    color: #000000;
+    font-family: 'Poppins';
+    margin-top: 6px;
+    font-weight: 400;
+}
+.testimonials .testimonial-item p {
+  
+    background-color: #0d6efd0f !important;
+}
+.testimonials .testimonial-item p::after {
+    border-top: 20px solid rgb(20 157 221);
 }
   </style>
 </html>
