--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       <img src="assets/img/hero-bg.jpg" alt="" data-aos="fade-in" class="">
       <div class="container" data-aos="fade-up" data-aos-delay="100">
         <h2>Hassan Iqbal</h2>
-        <p>I'm <span class="typed" data-typed-items="Senior Software Engineer, Frontend Developer,Full Stack Developer">WordPress Developer</span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
+        <p>I'm <span class="typed" data-typed-items="Frontend Developer,Full Stack Developer,WordPress Expert">Senior Software Engineer</span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
       </div>
     </section><!-- /Hero Section -->
   
