--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <li><a href="#skills"><i class="bi bi-images navicon"></i>Skills</a></li>
         <li><a href="#resume"><i class="bi bi-file-earmark-text navicon"></i>Resume</a></li>
         <li><a href="#portfolio"><i class="bi bi-images navicon"></i>Portfolio</a></li>
-        <li><a href="#technical"><i class="bi bi-images navicon"></i>Technical Proficiency</a></li>
+        <li><a href="#technical"><i class="bi bi-images navicon"></i>Tech Stack</a></li>
         <li><a href="#testimonials"><i class="bi bi-images navicon"></i>Testimonials</a></li>
         <li><a href="#contact"><i class="bi bi-envelope navicon"></i>Contact</a></li>
       </ul>
@@ -376,7 +376,7 @@
   <div class="container aos-init aos-animate" data-aos="fade-up" data-aos-delay="100">
   <!-- Section Title -->
   <div class="section-title" data-aos="fade-up">
-    <h2>Technical Proficiency</h2>
+    <h2>Tech Stack</h2>
     <p>Programming Languages & Frameworks </p>
   </div><!-- End Section Title -->
     <div class="row g-4 skills-animation">
@@ -414,7 +414,7 @@
             <img src="assets/img/icons/bootstrap.png" alt="HTML Icon" width="60"  class="me-2">
             <h3 class="mb-0">Bootstrap</h3>
           </div>
-          <span class="text-end d-block">80%</span>
+          <span class="text-end d-block">85%</span>
           <div class="progress">
             <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%;"></div>
           </div>
@@ -464,7 +464,7 @@
             <img src="assets/img/icons/angular.png" alt="HTML Icon" width="60"  class="me-2">
             <h3 class="mb-0">Angular</h3>
           </div>
-          <span class="text-end d-block">50%</span>
+          <span class="text-end d-block">60%</span>
           <div class="progress">
             <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%;"></div>
           </div>
@@ -476,7 +476,7 @@
             <img src="assets/img/icons/net-framework.png" alt="HTML Icon" width="60"  class="me-2">
             <h3 class="mb-0">.net Framework</h3>
           </div>
-          <span class="text-end d-block">40%</span>
+          <span class="text-end d-block">55%</span>
           <div class="progress">
             <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%;"></div>
           </div>
@@ -767,7 +767,7 @@
     </section><!-- /Testimonials Section -->
      <!-- Contact Section -->
      <section id="contact" class="contact section light-background">
-      <div class="container section-title align-center" data-aos="fade-up">
+      <div class="container section-title align-center mb-3" data-aos="fade-up">
         <h2>Contact</h2>
         <p>Feel free to reach out for collaborations, freelance work, or inquiries.</p>
       </div>
@@ -927,6 +927,9 @@ section#skills .skill-box p {
 .testimonials .testimonial-item p::after {
     border-top: 20px solid rgb(20 157 221);
 }
-
+.section-title {
+    padding-bottom: 30px;
+    position: relative;
+}
   </style>
 </html>
