--- a/index.html
+++ b/index.html
@@ -26,9 +26,11 @@
 
   <!-- Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 
-  <!-- =======================================================
+  <!--
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+
+  =======================================================
   * Template Name: iPortfolio
   * Template URL: https://bootstrapmade.com/iportfolio-bootstrap-portfolio-websites-template/
   * Updated: Jun 29 2024 with Bootstrap v5.3.3
@@ -57,21 +59,21 @@
       <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
       <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
       <a href="#" class="google-plus"><i class="bi bi-skype"></i></a>
-      <a href="https://www.linkedin.com/in/hassan-alkhari/" class="linkedin"><i class="bi bi-linkedin"></i></a>
+      <a href="https://www.linkedin.com/in/hassan-alkhari/" target="_blank" class="linkedin"><i class="bi bi-linkedin"></i></a>
     </div>
-
     <nav id="navmenu" class="navmenu">
       <ul>
-        <li><a href="#hero" class="active"><i class="bi bi-house navicon"></i>Home</a></li>
-        <li><a href="#about"><i class="bi bi-person navicon"></i>About</a></li>
-        <li><a href="#skills"><i class="bi bi-images navicon"></i>Skills</a></li>
-        <li><a href="#resume"><i class="bi bi-file-earmark-text navicon"></i>Resume</a></li>
-        <li><a href="#portfolio"><i class="bi bi-images navicon"></i>Portfolio</a></li>
-        <li><a href="#technical"><i class="bi bi-images navicon"></i>Tech Stack</a></li>
-        <li><a href="#testimonials"><i class="bi bi-images navicon"></i>Testimonials</a></li>
-        <li><a href="#contact"><i class="bi bi-envelope navicon"></i>Contact</a></li>
+        <li><a href="#hero" class=""><i class="bi bi-house-door navicon"></i> Home</a></li>
+        <li><a href="#about" class=""><i class="bi bi-person-circle navicon"></i> About</a></li>
+        <li><a href="#skills" class=""><i class="bi bi-lightbulb navicon"></i> Skills</a></li>
+        <li><a href="#resume" class=""><i class="bi bi-file-earmark-person navicon"></i> Resume</a></li>
+        <li><a href="#portfolio" class=""><i class="bi bi-collection navicon"></i> Portfolio</a></li>
+        <li><a href="#technical" class="active"><i class="bi bi-tools navicon"></i> Tech Stack</a></li>
+        <li><a href="#testimonials" class=""><i class="bi bi-chat-quote navicon"></i> Testimonials</a></li>
+        <li><a href="#contact"><i class="bi bi-envelope-at navicon"></i> Contact</a></li>
       </ul>
     </nav>
+    
 
   </header>
   <main class="main">
