--- a/index.html
+++ b/index.html
@@ -1220,19 +1220,19 @@
   <div id="preloader"></div>
 
   <!-- Vendor JS Files -->
-  <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js" defer></script>
-  <script src="assets/vendor/php-email-form/validate.js" defer></script>
-  <script src="assets/vendor/aos/aos.js" defer></script>
-  <script src="assets/vendor/typed.js/typed.umd.js" defer> </script>
-  <script src="assets/vendor/purecounter/purecounter_vanilla.js" defer></script>
-  <script src="assets/vendor/waypoints/noframework.waypoints.js" defer></script>
-  <script src="assets/vendor/glightbox/js/glightbox.min.js" defer></script>
-  <script src="assets/vendor/imagesloaded/imagesloaded.pkgd.min.js" defer></script>
-  <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js" defer></script>
-  <script src="assets/vendor/swiper/swiper-bundle.min.js" defer></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" async></script>
+  <script src="assets/vendor/php-email-form/validate.js" async></script>
+  <script src="assets/vendor/aos/aos.js" async></script>
+  <script src="assets/vendor/typed.js/typed.umd.js" async> </script>
+  <script src="assets/vendor/purecounter/purecounter_vanilla.js" async></script>
+  <script src="assets/vendor/waypoints/noframework.waypoints.js" async></script>
+  <script src="assets/vendor/glightbox/js/glightbox.min.js" async></script>
+  <script src="assets/vendor/imagesloaded/imagesloaded.pkgd.min.js" async></script>
+  <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js" async></script>
+  <script src="assets/vendor/swiper/swiper-bundle.min.js" async></script>
 
   <!-- Main JS File -->
-  <script src="assets/js/main.js" defer></script>
+  <script src="assets/js/main.js" async></script>
 
 </body>
 
