--- a/index.html
+++ b/index.html
@@ -338,13 +338,20 @@
           <h4>Senior Software Engineer</h4>
           <h5>Aug 2022 - Present</h5>
           <p><em>iENGINEERING</em></p>
-          <ul>
+            <ul>
+              <li>Developed complex WordPress projects, responsive themes, and custom plugins.</li>
+              <li>Led the development of a 62-multi-network site for a U.S. government-based company.</li>
+              <li>Converted Figma designs into Elementor widgets, ensuring pixel-perfect implementations.</li>
+              <li>Designed and implemented Meetings REST API for seamless scheduling and management.</li>
+              <li>Developed and integrated a Sponsors Carousel for dynamic content management.</li>
+              <li>Worked extensively with Advanced Custom Fields PRO for custom WordPress functionality.</li>
+              <li>Implemented AWS Cognito authentication for secure user access and identity management.</li>
               <li>Developed and deployed scalable POS APIs using .NET Core and integrated them with an Angular-based POS system.</li>
               <li>Enhanced UI for MVC-based projects and built dynamic dashboards in Angular.</li>
               <li>Implemented JWT authentication and CRUD operations for multiple ASP.NET projects.</li>
-              <li>Developed microservices with .NET Core Web API.</li>
               <li>Provided ongoing support, including bug fixes, UI improvements, and performance optimization.</li>
           </ul>
+          
       </div><!-- End Resume Item -->
       
       <div class="resume-item">
