--- a/index.html
+++ b/index.html
@@ -327,8 +327,20 @@
           <div>Time Management for Personal & Professional Productivity – University of California</div>
         </div>
       </div>
-   
-        </div><!-- End Resume Item -->
+      <h3 class="resume-title">Career Background</h3>
+
+      <div class="resume-certification">
+
+      <div class="resume-item">
+        <h4>Previous WordPress Development Roles</h4>
+        <ul>
+          <li><strong>WordPress Developer</strong> – AA Printer (Aug 2016 - Sep 2017)</li>
+          <li><strong>WordPress Developer</strong> – Aspire Logics (Dec 2015 - Aug 2016)</li>
+          <li><strong>Junior WordPress Developer</strong> – Agile Solutions (Jan 2015 - Nov 2015)</li>
+        </ul>
+      </div><!-- End Resume Item -->
+    </div>
+        </div><!--col -end -->
   
 
       <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
@@ -375,14 +387,7 @@
           </ul>
         </div><!-- End Resume Item -->
 
-        <div class="resume-item">
-          <h4>Previous WordPress Development Roles</h4>
-          <ul>
-            <li><strong>WordPress Developer</strong> – AA Printer (Aug 2016 - Sep 2017)</li>
-            <li><strong>WordPress Developer</strong> – Aspire Logics (Dec 2015 - Aug 2016)</li>
-            <li><strong>Junior WordPress Developer</strong> – Agile Solutions (Jan 2015 - Nov 2015)</li>
-          </ul>
-        </div><!-- End Resume Item -->
+  
     </div>
   </div>
 </section><!-- /Resume Section -->
