--- a/index.html
+++ b/index.html
@@ -387,8 +387,21 @@
             <li>Optimized WordPress databases and performance.</li>
           </ul>
         </div><!-- End Resume Item -->
-
-  
+    </div>
+    <div class="col-lg-12" data-aos="fade-up" data-aos-delay="200">
+    <h3 class="resume-title">Leadership & Strategic Role</h3>
+    <div class="resume-item">
+      <h4>Chief Technology Officer (CTO)</h4>
+      <h5>Oct 2017 - Aug 2020</h5>
+      <p><em>Logics Buffer</em></p>
+      <ul>
+        <li>Led project management and architectural decision-making, ensuring efficient workflow and high-quality deliverables.</li>
+        <li>Maintained direct communication with clients, providing regular updates on project progress and aligning development with business goals.</li>
+        <li>Oversaw project workflows, strategically delegating tasks to developers based on their expertise to maximize efficiency.</li>
+        <li>Managed and mentored a development team, fostering a collaborative environment to drive innovation and problem-solving.</li>
+        <li>Spearheaded the creation of user-centric, visually appealing websites with a strong focus on intuitive UI/UX design.</li>
+        <li>Specialized in custom WordPress development, including theme creation, plugin/widget development, and responsive layouts.</li>
+      </ul>
     </div>
   </div>
 </section><!-- /Resume Section -->
