--- a/index.html
+++ b/index.html
@@ -70,12 +70,12 @@
     </div>
     <nav id="navmenu" class="navmenu">
       <ul>
-        <li><a href="#hero" class=""><i class="bi bi-house-door navicon"></i> Home</a></li>
+        <li><a href="#hero" class="active"><i class="bi bi-house-door navicon"></i> Home</a></li>
         <li><a href="#about" class=""><i class="bi bi-person-circle navicon"></i> About</a></li>
         <li><a href="#skills" class=""><i class="bi bi-lightbulb navicon"></i> Skills</a></li>
         <li><a href="#resume" class=""><i class="bi bi-file-earmark-person navicon"></i> Resume</a></li>
         <li><a href="#portfolio" class=""><i class="bi bi-collection navicon"></i> Portfolio</a></li>
-        <li><a href="#technical" class="active"><i class="bi bi-tools navicon"></i> Tech Stack</a></li>
+        <li><a href="#technical" ><i class="bi bi-tools navicon"></i> Tech Stack</a></li>
         <li><a href="#testimonials" class=""><i class="bi bi-chat-quote navicon"></i> Testimonials</a></li>
         <li><a href="#contact"><i class="bi bi-envelope-at navicon"></i> Contact</a></li>
       </ul>
@@ -300,9 +300,9 @@
           <p><em>Allama Iqbal Open University, Pakistan</em></p>
         </div><!-- End Resume Item -->
         <div class="resume-item">
-          <h4>Raees ul Ahrar College</h4>
+          <h4>Intermediate in Computer Science</h4>
           <h5> 2007 - 2009 </h5>
-          <p><em>Allama Iqbal Open University, Pakistan</em></p>
+          <p><em>Raees ul Ahrar College</em></p>
         </div><!-- End Resume Item -->
         <h3 class="resume-title">Certifications</h3>
         <div class="resume-item">
