--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <i class="header-toggle d-xl-none bi bi-list"></i>
 
     <div class="profile-img">
-      <img src="assets/img/my-profile-img-sb.png" alt="" class="img-fluid rounded-circle">
+      <img src="assets/img/profile-img.png" alt="" class="img-fluid rounded-circle">
     </div>
 
     <a href="index.html" class="logo d-flex align-items-center justify-content-center">
@@ -98,7 +98,7 @@
     <section id="about" class="about section">
       <div class="container section-title" data-aos="fade-up">
         <h2>About</h2>
-        <p>Full Stack Developer with 9+ years of experience in developing web applications, including custom themes, 
+        <p>wordpress Developer with 9+ years of experience in developing web applications, including custom themes, 
           plugins, and performance-optimized solutions. Over the past year, I have been working with .NET and Angular, 
           expanding my expertise in modern front-end and back-end development. Proficient in HTML5, CSS3,
           JavaScript, jQuery, PHP, MySQL, and ASP.NET, with a strong focus on front-end UI, performance, and scalability.
@@ -108,7 +108,7 @@
       <div class="container" data-aos="fade-up" data-aos-delay="100">
         <div class="row gy-4 justify-content-center">
           <div class="col-lg-4">
-            <img src="assets/img/my-profile-img.png" class="img-fluid" alt="Hassan Iqbal" style="border-radius: 50px;">
+            <img src="assets/img/profile-img.png" class="img-fluid" alt="Hassan Iqbal" style="border-radius: 50px;">
           </div>
           <div class="col-lg-8 content">
             <h2>WordPress Expert | .NET & Angular Enthusiast</h2>
